--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,20 @@ span {
 p {
   margin-bottom: 5px;
 }
+
+#imageandcountry2 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+  height: 300px;
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.242);
+}
+
+
+
 /* #countries-list {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
